--- a/frontend_my_finance/package.json
+++ b/frontend_my_finance/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.3",
+    "@formkit/auto-animate": "^0.8.2",
+    "axios": "^1.3.1",
     "bootstrap": "^5.3.3",
     "bootstrap-vue-next": "^0.24.6",
     "vue": "^3.4.35",
